--- a/src/components/Menu/Hamburger_menuPanel.scss
+++ b/src/components/Menu/Hamburger_menuPanel.scss
@@ -9,7 +9,7 @@
 	height: 100%;
 	transition: left 0.3s;
 	overflow: auto;
-	z-index: 11;
+	z-index: 15;
 
 	&__isactive {
 		left: 0vw;
@@ -42,6 +42,87 @@
 		margin: 0 1rem;
 	}
 }
+
+.fixed-icons {
+	&--mobile {
+		position: relative;
+		left: -3.5rem;
+		bottom: 50px;
+		width: 15rem;
+		height: 6rem;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0 0.5rem 0 1.5rem;
+		font-size: 4rem;
+		font-weight: bold;
+		border-radius: 0 10px 10px 0;
+		box-shadow: 0px 0px 20px -10px;
+		transition: left 0.3s;
+		&:hover {
+			left: 0%;
+			cursor: pointer;
+		}
+		&__theme {
+			top: 28rem;
+		}
+		&__github {
+			top: 34rem;
+			background-color: $primary-color;
+
+			a {
+				width: 100%;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				text-decoration: none;
+				color: $white;
+			}
+			.github-icon {
+				width: 5rem;
+				height: 5rem;
+				background-image: url(../../icons/icons-github.svg);
+			}
+		}
+	}
+	&__github--mobile {
+		top: 4rem;
+		background-color: $primary-color;
+
+		a {
+			width: 100%;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			text-decoration: none;
+			color: $white;
+		}
+		.github-icon {
+			width: 5rem;
+			height: 5rem;
+			background-image: url(../../icons/icons-github.svg);
+		}
+	}
+}
+#light .fixed-icons--mobile {
+	box-shadow: 0px 0px 20px -10px;
+}
+#dark .fixed-icons--mobile {
+	&__github {
+		border: 2px solid $white;
+		&--mobile {
+			border: 2px solid $white;
+		}
+	}
+}
+@media (min-width: 800px) {
+	.fixed-icons {
+		&--mobile {
+			display: none;
+		}
+	}
+}
+
 #light .hamburger-panel {
 	background-color: $white;
 	&__menu {
