--- a/src/components/Menu/Menu_bar.scss
+++ b/src/components/Menu/Menu_bar.scss
@@ -12,7 +12,7 @@
 	border-bottom: 1px solid black;
 	background-color: $primary-color-transparent;
 	padding: 10px 5px;
-	z-index: 5;
+	z-index: 15;
 
 	&__avatar {
 		width: 8rem;
